[project]
name = "ComfyUI-SaveAndReload-Image"
description = "Save and Reload an Image to prevent first run OOM"
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]


[project.urls]
Repository = "https://github.com/teepunkt-esspunkt/ComfyUI-SaveAndReload-Image"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/teepunkt-esspunkt/ComfyUI-SaveAndReload-Image/wiki"
"Bug Tracker" = "https://github.com/teepunkt-esspunkt/ComfyUI-SaveAndReload-Image/issues"

[tool.comfy]
PublisherId = "teadot"
DisplayName = "ComfyUI-SaveAndReload-Image"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

